# xmonad-config

./: .gitignore  .gitmodules  README.md  stack.yaml  xmonad-config.cabal  xmonad.hs
lib/: Colors.hs  Icons.hs
