cabal-version: 1.12

name:           xmonad-config
version:        0.1.0.0
homepage:       https://github.com/willfindlay/xmonad-config#readme
bug-reports:    https://github.com/willfindlay/xmonad-config/issues
author:         William Findlay
maintainer:     will@isovalent.com
copyright:      2022 William Findlay
license:        BSD3
build-type:     Simple

library
  exposed-modules:
      Colors
      Icons
  hs-source-dirs:
      lib
  build-depends:
      base
  default-language: Haskell2010

executable xmonad-config-exe
  main-is: xmonad.hs
  ghc-options: -Wall -Werror -fno-warn-missing-signatures -threaded
  build-depends:
      base
    , xmonad
    , xmonad-config
    , xmonad-contrib
    , containers
  default-language: Haskell2010
